--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
-    <h1>这是一个页面</h1>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel="shortcut icon" href=./1.ico type=image/x-icon><title>也子</title><link href=/css/app.d6de7941.css rel=preload as=style><link href=/js/app.d4263690.js rel=preload as=script><link href=/js/chunk-vendors.fc5088b2.js rel=preload as=script><link href=/css/app.d6de7941.css rel=stylesheet></head><body><noscript><strong>We're sorry but my-blog doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.fc5088b2.js></script><script src=/js/app.d4263690.js></script></body></html>
